--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,3 +1,6 @@
 {
-  "home.title": "Your tasks"
+  "home_title": "Your tasks",
+  "home_button_add": "Add a task",
+  "home_empty_tasks": "All clear here",
+  "home_completed": "Completed"
 }
