feat: Add AboutPage and link it in SettingsPage

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,5 +1,7 @@
 {
   "language": "en",
+  "language_en": "English",
+  "language_es": "Spanish",
   "app_name": "Tasking",
   "home_title": "Your tasks",
   "home_button_add": "Add a task",
@@ -14,5 +16,27 @@
   "dialog_delete_title": "Will be permanently deleted.",
   "task_empty_title": "Ups! Task not found",
   "task_empty_subtitle": "Go back to home and add a new task",
-  "settings_title": "Settings"
+  "settings_title": "Settings",
+  "settings_label_general": "General",
+  "settings_general_language": "Language",
+  "settings_general_theme": "Theme",
+  "settings_general_reminders": "Reminders",
+  "settings_label_about": "About",
+  "settings_about_app": "About Tasking",
+  "settings_label_legal": "Legal",
+  "settings_legal_privacy_policy": "Privacy Policy",
+  "settings_legal_terms_of_use": "Terms of Use",
+  "settings_legal_licenses": "Licenses",
+  "settings_label_social": "Social",
+  "settings_social_rate_app": "Rate App",
+  "settings_social_share_app": "Share App",
+  "settings_social_feedback": "Send Feedback",
+  "settings_label_support": "Support",
+  "settings_support_contact": "Contact Us",
+  "settings_support_coffee": "Buy me a coffee",
+  "settings_button_restore_app": "Restore App",
+  "about_author": "Dev: Axel Román",
+  "about_author_description": "I'm a software developer from México. I love to create apps and learn new things.",
+  "about_description": "Tasking is a simple task manager app. It's free and open source.",
+  "about_version": "Version"
 }
