--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -1,5 +1,7 @@
 {
   "language": "es",
+  "language_en": "Ingles",
+  "language_es": "Español",
   "app_name": "Tasking",
   "home_title": "Tus tareas",
   "home_button_add": "Agregar una tarea",
@@ -14,5 +16,27 @@
   "dialog_delete_title": "Se eliminará permanentemente.",
   "task_empty_title": "Ups! Tarea no encontrada",
   "task_empty_subtitle": "Vuelve al inicio y agrega una nueva tarea",
-  "settings_title": "Configuración"
+  "settings_title": "Configuración",
+  "settings_label_general": "General",
+  "settings_general_language": "Idioma",
+  "settings_general_theme": "Tema",
+  "settings_general_reminders": "Recordatorios",
+  "settings_label_about": "Acerca de",
+  "settings_about_app": "Acerca de Tasking",
+  "settings_label_legal": "Legal",
+  "settings_legal_privacy_policy": "Política de privacidad",
+  "settings_legal_terms_of_use": "Términos de uso",
+  "settings_legal_licenses": "Licencias",
+  "settings_label_social": "Social",
+  "settings_social_rate_app": "Calificar la aplicación",
+  "settings_social_share_app": "Compartir la aplicación",
+  "settings_social_feedback": "Enviar comentarios",
+  "settings_label_support": "Soporte",
+  "settings_support_contact": "Contáctenos",
+  "settings_support_coffee": "Cómprame un café",
+  "settings_button_restore_app": "Restablecer la aplicación",
+  "about_author": "Dev: Axel Román",
+  "about_author_description": "Soy un desarrollador de software de México. Me encanta crear aplicaciones y aprender cosas nuevas.",
+  "about_description": "Tasking es una aplicación simple del administrador de tareas. Es gratis y de código abierto.",
+  "about_version": "Version"
 }
