feat: Update app theme and add support for changing theme

--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -20,17 +20,17 @@
   "settings_label_general": "General",
   "settings_general_language": "Idioma",
   "settings_general_theme": "Tema",
+  "settings_general_dark_mode": "Oscuro",
+  "settings_general_light_mode": "Claro",
   "settings_general_reminders": "Recordatorios",
   "settings_label_about": "Acerca de",
   "settings_about_app": "Acerca de Tasking",
   "settings_label_legal": "Legal",
   "settings_legal_privacy_policy": "Política de privacidad",
   "settings_legal_terms_of_use": "Términos de uso",
-  "settings_legal_licenses": "Licencias",
   "settings_label_social": "Social",
   "settings_social_rate_app": "Calificar la aplicación",
   "settings_social_share_app": "Compartir la aplicación",
-  "settings_social_feedback": "Enviar comentarios",
   "settings_label_support": "Soporte",
   "settings_support_contact": "Contáctenos",
   "settings_support_coffee": "Cómprame un café",
