--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -20,17 +20,17 @@
   "settings_label_general": "General",
   "settings_general_language": "Language",
   "settings_general_theme": "Theme",
+  "settings_general_dark_mode": "Dark",
+  "settings_general_light_mode": "Light",
   "settings_general_reminders": "Reminders",
   "settings_label_about": "About",
   "settings_about_app": "About Tasking",
   "settings_label_legal": "Legal",
   "settings_legal_privacy_policy": "Privacy Policy",
   "settings_legal_terms_of_use": "Terms of Use",
-  "settings_legal_licenses": "Licenses",
   "settings_label_social": "Social",
   "settings_social_rate_app": "Rate App",
   "settings_social_share_app": "Share App",
-  "settings_social_feedback": "Send Feedback",
   "settings_label_support": "Support",
   "settings_support_contact": "Contact Us",
   "settings_support_coffee": "Buy me a coffee",
