feat: Add shared preferences service

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2,6 +2,7 @@
   "language": "en",
   "language_en": "English",
   "language_es": "Spanish",
+  "language_description": "The language of the application will be changed according to the language of the device.",
   "app_name": "Tasking",
   "home_title": "Your tasks",
   "home_button_add": "Add a task",
@@ -10,6 +11,7 @@
   "home_completed": "Completed",
   "button_delete_task": "Delete Task",
   "button_cancel": "Cancel",
+  "button_continue": "Continue",
   "button_reminder": "Remind Me",
   "button_add_due_date": "Add Due Date",
   "dialog_delete_subtitle": "You won't be able to undo this action.",
