--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -2,6 +2,7 @@
   "language": "es",
   "language_en": "Ingles",
   "language_es": "Español",
+  "language_description": "El lenguaje de la aplicación se cambiará de acuerdo con el idioma del dispositivo.",
   "app_name": "Tasking",
   "home_title": "Tus tareas",
   "home_button_add": "Agregar una tarea",
@@ -10,6 +11,7 @@
   "home_completed": "Completado",
   "button_delete_task": "Eliminar tarea",
   "button_cancel": "Cancelar",
+  "button_continue": "Continuar",
   "button_reminder": "Recuerdame",
   "button_add_due_date": "Agregar fecha de vencimiento",
   "dialog_delete_subtitle": "No podrás deshacer esta acción.",
