chore: change icon launcher and intl intro page

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4,6 +4,13 @@
   "language_es": "Spanish",
   "language_description": "The language of the application will be changed according to the language of the device.",
   "app_name": "Tasking",
+  "intro_subtitle": "A simple way to control your digital life",
+  "intro_option1": "Manage your time with our app",
+  "intro_option2": "Task monitoring with daily reminders",
+  "intro_option3": "Wherever you want, at any time, anywhere",
+  "intro_option4": "Your data are private and safe",
+  "intro_disclaimer": "*This app still in beta, expect the unexpected behavior and UI changes*",
+  "intro_button": "Get started",
   "home_title": "Your tasks",
   "home_button_add": "Add a task",
   "home_empty_tasks": "All clear here",
