--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -4,6 +4,13 @@
   "language_es": "Español",
   "language_description": "El lenguaje de la aplicación se cambiará de acuerdo con el idioma del dispositivo.",
   "app_name": "Tasking",
+  "intro_subtitle": "Una forma simple de controlar su vida digital",
+  "intro_option1": "Administre su tiempo con nuestra aplicación",
+  "intro_option2": "Monitoreo de tareas con recordatorios diarios",
+  "intro_option3": "Donde quiera, en cualquier momento, en cualquier lugar",
+  "intro_option4": "Sus datos son privados y seguros",
+  "intro_disclaimer": "*Esta aplicación todavía está en beta, espere el comportamiento inesperado y los cambios de la interfaz de usuario.*",
+  "intro_button": "Empezar",
   "home_title": "Tus tareas",
   "home_button_add": "Agregar una tarea",
   "home_empty_tasks": "Todo bien aquí",
