feat: Add new logo.svg asset file and use it in AboutPage

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -45,7 +45,7 @@
   "settings_support_contact": "Contact Us",
   "settings_support_coffee": "Buy me a coffee",
   "settings_button_restore_app": "Restore App",
-  "about_author": "Dev: Axel Román",
+  "about_author": "Ingedevs",
   "about_author_description": "I'm a software developer from México. I love to create apps and learn new things.",
   "about_description": "Tasking is a simple task manager app. It's free and open source.",
   "about_version": "Version",
