--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -45,7 +45,7 @@
   "settings_support_contact": "Contáctenos",
   "settings_support_coffee": "Cómprame un café",
   "settings_button_restore_app": "Restablecer la aplicación",
-  "about_author": "Dev: Axel Román",
+  "about_author": "Ingedevs",
   "about_author_description": "Soy un desarrollador de software de México. Me encanta crear aplicaciones y aprender cosas nuevas.",
   "about_description": "Tasking es una aplicación simple del administrador de tareas. Es gratis y de código abierto.",
   "about_version": "Version",
