:sparkles: Feat: Add new permission options for notification and alarm groups

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -9,6 +9,7 @@
   "intro_option2": "Task monitoring with daily reminders",
   "intro_option3": "Wherever you want, at any time, anywhere",
   "intro_option4": "Your data are private and safe",
+  "intro_option5": "Share tasks with your friends",
   "intro_disclaimer": "*This app still in beta, expect the unexpected behavior and UI changes*",
   "intro_button": "Get started",
   "home_title": "Your tasks",
