--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -9,6 +9,7 @@
   "intro_option2": "Monitoreo de tareas con recordatorios diarios",
   "intro_option3": "Donde quiera, en cualquier momento, en cualquier lugar",
   "intro_option4": "Sus datos son privados y seguros",
+  "intro_option5": "Comparte tareas con tus amigos",
   "intro_disclaimer": "*Esta aplicación todavía está en beta, espere el comportamiento inesperado y los cambios de la interfaz de usuario.*",
   "intro_button": "Empezar",
   "home_title": "Tus tareas",
