:bug: Fix: notifications provider save state

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2,7 +2,6 @@
   "language": "en",
   "language_en": "English",
   "language_es": "Spanish",
-  "language_description": "The language of the application will be changed according to the language of the device.",
   "app_name": "Tasking",
   "intro_subtitle": "A simple way to control your digital life",
   "intro_option1": "Manage your time with our app",
@@ -12,6 +11,8 @@
   "intro_option5": "Share tasks with your friends",
   "intro_disclaimer": "*This app still in beta, expect the unexpected behavior and UI changes*",
   "intro_button": "Get started",
+  "intro_notification_title": "Hey! We need your permission",
+  "intro_notification_body": "Enable notifications to receive reminders of your tasks.You can change this in the configuration of your device.",
   "home_title": "Your tasks",
   "home_button_add": "Add a task",
   "home_empty_tasks": "All clear here",
@@ -28,11 +29,8 @@
   "task_empty_subtitle": "Go back to home and add a new task",
   "settings_title": "Settings",
   "settings_label_general": "General",
-  "settings_general_language": "Language",
-  "settings_general_theme": "Theme",
-  "settings_general_dark_mode": "Dark",
-  "settings_general_light_mode": "Light",
-  "settings_general_reminders": "Reminders",
+  "settings_general_cloud": "Backup Copy",
+  "settings_general_notifications": "Notifications",
   "settings_label_about": "About",
   "settings_about_app": "About Tasking",
   "settings_label_legal": "Legal",
@@ -44,6 +42,7 @@
   "settings_label_support": "Support",
   "settings_support_contact": "Contact Us",
   "settings_support_coffee": "Buy me a coffee",
+  "settings_label_restore": "Danger Zone",
   "settings_button_restore_app": "Restore App",
   "about_author": "Ingedevs",
   "about_author_description": "I'm a software developer from México. I love to create apps and learn new things.",
@@ -51,5 +50,10 @@
   "about_version": "Version",
   "dialog_restore_title": "Restore App",
   "dialog_restore_subtitle": "Are you sure you want to restore the data app? This action cannot be undone.",
-  "reminder_notification_title": "You have a pending task"
+  "reminder_notification_title": "You have a pending task",
+  "notification_enable_title_modal": "Notifications enabled",
+  "notification_enable_description_modal": "You will receive a notification about your daily tasks and reminders.",
+  "notification_disable_title_modal": "Disabled notifications",
+  "notification_disable_description_modal": "Please enable notifications from settings to get notified about your tasks.",
+  "notification_button_modal": "Open Settings"
 }
