--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -2,7 +2,6 @@
   "language": "es",
   "language_en": "Ingles",
   "language_es": "Español",
-  "language_description": "El lenguaje de la aplicación se cambiará de acuerdo con el idioma del dispositivo.",
   "app_name": "Tasking",
   "intro_subtitle": "Una forma simple de controlar su vida digital",
   "intro_option1": "Administre su tiempo con nuestra aplicación",
@@ -12,6 +11,8 @@
   "intro_option5": "Comparte tareas con tus amigos",
   "intro_disclaimer": "*Esta aplicación todavía está en beta, espere el comportamiento inesperado y los cambios de la interfaz de usuario.*",
   "intro_button": "Empezar",
+  "intro_notification_title": "Ey! Necesitamos tu permiso",
+  "intro_notification_body": "Habilite las notificaciones para recibir recordatorios de sus tareas. Puede cambiar esto en la configuración de su dispositivo.",
   "home_title": "Tus tareas",
   "home_button_add": "Agregar una tarea",
   "home_empty_tasks": "Todo bien aquí",
@@ -28,11 +29,8 @@
   "task_empty_subtitle": "Vuelve al inicio y agrega una nueva tarea",
   "settings_title": "Configuración",
   "settings_label_general": "General",
-  "settings_general_language": "Idioma",
-  "settings_general_theme": "Tema",
-  "settings_general_dark_mode": "Oscuro",
-  "settings_general_light_mode": "Claro",
-  "settings_general_reminders": "Recordatorios",
+  "settings_general_cloud": "Copia de seguridad",
+  "settings_general_notifications": "Notificaciones",
   "settings_label_about": "Acerca de",
   "settings_about_app": "Acerca de Tasking",
   "settings_label_legal": "Legal",
@@ -43,7 +41,8 @@
   "settings_social_share_app": "Compartir la aplicación",
   "settings_label_support": "Soporte",
   "settings_support_contact": "Contáctenos",
-  "settings_support_coffee": "Cómprame un café",
+  "settings_support_coffee": "Invítame un café",
+  "settings_label_restore": "Zona peligrosa",
   "settings_button_restore_app": "Restablecer la aplicación",
   "about_author": "Ingedevs",
   "about_author_description": "Soy un desarrollador de software de México. Me encanta crear aplicaciones y aprender cosas nuevas.",
@@ -51,5 +50,10 @@
   "about_version": "Version",
   "dialog_restore_title": "Restaurar la aplicación",
   "dialog_restore_subtitle": "¿Estás seguro de que quieres restaurar la aplicación de datos?Esta acción no se puede deshacer.",
-  "reminder_notification_title": "Tienes una tarea pendiente"
+  "reminder_notification_title": "Tienes una tarea pendiente",
+  "notification_enable_title_modal": "Notificaciones habilitadas",
+  "notification_enable_description_modal": "Recibirá una notificación sobre sus tareas y recordatorios diarios.",
+  "notification_disable_title_modal": "Notificaciones deshabilitadas",
+  "notification_disable_description_modal": "Habilite las notificaciones desde la configuración para recibir una notificación sobre sus tareas.",
+  "notification_button_modal": "Abrir configuración"
 }
