:sparkles: Feat(group): implement delete group functionality

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -19,6 +19,7 @@
   "home_pending": "Pending",
   "home_completed": "Completed",
   "button_delete_task": "Delete Task",
+  "button_save": "Save",
   "button_cancel": "Cancel",
   "button_continue": "Continue",
   "button_reminder": "Remind Me",
@@ -61,6 +62,7 @@
   "group_select_title": "Select group",
   "group_select_subtitle": "Keep for more options",
   "group_add_button": "Add group",
+  "group_name_field": "Group name",
   "group_options_edit": "Edit group",
   "group_options_delete_title": "Delete group",
   "group_options_delete_subtitle": "You can't delete the selected group",
