--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -19,6 +19,7 @@
   "home_pending": "Pendiente",
   "home_completed": "Completado",
   "button_delete_task": "Eliminar tarea",
+  "button_save": "Guardar",
   "button_cancel": "Cancelar",
   "button_continue": "Continuar",
   "button_reminder": "Recuerdame",
@@ -61,6 +62,7 @@
   "group_select_title": "Seleccionar grupo",
   "group_select_subtitle": "Mantén para más opciones",
   "group_add_button": "Agregar grupo",
+  "group_name_field": "Nombre del grupo",
   "group_options_edit": "Editar grupo",
   "group_options_delete_title": "Eliminar grupo",
   "group_options_delete_subtitle": "No puedes eliminar el grupo seleccionado",
