:busts_in_silhouette: add links in about

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -34,7 +34,7 @@
   "settings_general_reminders": "Reminders",
   "settings_label_custom": "Personalization",
   "settings_custom_theme": "Theme App",
-  "settings_label_about": "About", 
+  "settings_label_about": "About",
   "settings_about_app": "About Tasking",
   "settings_label_legal": "Legal",
   "settings_legal_privacy_policy": "Privacy Policy",
@@ -50,7 +50,8 @@
   "about_author": "Ingedevs",
   "about_author_description": "I'm a software developer from México. I love to create apps and learn new things.",
   "about_description": "Tasking is a simple task manager app. It's free and open source.",
-  "about_version": "Version",
+  "about_built_part1": "Built using ",
+  "about_built_part2": " with much ",
   "dialog_restore_title": "Restore App",
   "dialog_restore_subtitle": "Are you sure you want to restore the data app? This action cannot be undone.",
   "reminder_notification_title": "You have a pending task",
