--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -50,7 +50,8 @@
   "about_author": "Ingedevs",
   "about_author_description": "Soy un desarrollador de software de México. Me encanta crear aplicaciones y aprender cosas nuevas.",
   "about_description": "Tasking es una aplicación simple del administrador de tareas. Es gratis y de código abierto.",
-  "about_version": "Version",
+  "about_built_part1": "Construido con ",
+  "about_built_part2": " con mucho ",
   "dialog_restore_title": "Restaurar la aplicación",
   "dialog_restore_subtitle": "¿Estás seguro de que quieres restaurar la aplicación de datos?Esta acción no se puede deshacer.",
   "reminder_notification_title": "Tienes una tarea pendiente",
