:globe_with_meridians: Add labels en, es

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -20,6 +20,9 @@
   "home_completed": "Completed",
   "button_delete_task": "Delete Task",
   "button_save": "Save",
+  "button_clear": "Clear",
+  "button_show": "Show",
+  "button_hide": "Hide",
   "button_cancel": "Cancel",
   "button_continue": "Continue",
   "button_reminder": "Remind Me",
