--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -20,6 +20,9 @@
   "home_completed": "Completado",
   "button_delete_task": "Eliminar tarea",
   "button_save": "Guardar",
+  "button_clear": "Limpiar",
+  "button_show": "Mostrar",
+  "button_hide": "Ocultar",
   "button_cancel": "Cancelar",
   "button_continue": "Continuar",
   "button_reminder": "Recuerdame",
