:recycle:  Remove unnecessary code and fix imports

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -6,9 +6,8 @@
   "intro_subtitle": "A simple way to control your digital life",
   "intro_option1": "Manage your time with our app",
   "intro_option2": "Task monitoring with daily reminders",
-  "intro_option3": "Wherever you want, at any time, anywhere",
+  "intro_option3": "Local storage on the device",
   "intro_option4": "Your data are private and safe",
-  "intro_option5": "Share tasks with your friends",
   "intro_disclaimer": "*This app still in beta, expect the unexpected behavior and UI changes*",
   "intro_button": "Get started",
   "intro_notification_title": "Hey! We need your permission",
