--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -43,7 +43,6 @@
   "settings_social_rate_app": "Calificar la aplicación",
   "settings_social_share_app": "Compartir la aplicación",
   "settings_support_contact": "Contáctenos",
-  "settings_support_coffee": "Invítame un café",
   "settings_label_restore": "Zona peligrosa",
   "settings_button_restore_app": "Restablecer la aplicación",
   "about_author": "Ingedevs",
@@ -66,5 +65,8 @@
   "group_options_edit": "Editar grupo",
   "group_options_delete_title": "Eliminar grupo",
   "group_options_delete_subtitle": "No puedes eliminar el grupo seleccionado",
-  "group_delete_confirm_description": "¿Estás seguro de eliminar este grupo?, se eliminarán todas las tareas que contiene y no se podrán recuperar."
+  "group_delete_confirm_description": "¿Estás seguro de eliminar este grupo?, se eliminarán todas las tareas que contiene y no se podrán recuperar.",
+  "calendar_today": "Hoy",
+  "calendar_tomorrow": "Mañana",
+  "calendar_custom": "Otro día"
 }
