:bug: fix language in settings page

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -37,11 +37,8 @@
   "settings_custom_theme": "Theme App",
   "settings_label_about": "About",
   "settings_about_app": "About Tasking",
+  "settings_label_info": "More information",
   "settings_legal_privacy_policy": "Privacy Policy",
-  "settings_legal_terms_of_use": "Terms of Use",
-  "settings_label_social": "Social",
-  "settings_social_rate_app": "Rate App",
-  "settings_social_share_app": "Share App",
   "settings_support_contact": "Contact Us",
   "settings_label_restore": "Danger Zone",
   "settings_button_restore_app": "Restore App",
