:art: change in card task background

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -20,8 +20,8 @@
   "button_delete_task": "Delete Task",
   "button_save": "Save",
   "button_clear": "Clear",
-  "button_show": "Show",
-  "button_hide": "Hide",
+  "button_show": "Show Completed",
+  "button_hide": "Hide Completed",
   "button_cancel": "Cancel",
   "button_continue": "Continue",
   "button_reminder": "Remind Me",
