--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -20,8 +20,8 @@
   "button_delete_task": "Eliminar tarea",
   "button_save": "Guardar",
   "button_clear": "Limpiar",
-  "button_show": "Mostrar",
-  "button_hide": "Ocultar",
+  "button_show": "Mostrar Completado",
+  "button_hide": "Ocultar Completado",
   "button_cancel": "Cancelar",
   "button_continue": "Continuar",
   "button_reminder": "Recuerdame",
