🌐 translate title group defaults

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4,6 +4,9 @@
   "language_es": "Spanish",
   "language_label": "Language",
   "app_name": "Tasking",
+  "default_group_1": "ToDo",
+  "default_group_2": "Shopping",
+  "default_group_3": "Work",
   "intro_subtitle": "A simple way to control your digital life",
   "intro_option1": "Manage your time with our app",
   "intro_option2": "Task monitoring with daily reminders",
