--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -4,6 +4,9 @@
   "language_es": "Español",
   "language_label": "Idioma",
   "app_name": "Tasking",
+  "default_group_1": "Tareas",
+  "default_group_2": "Compras",
+  "default_group_3": "Trabajo",
   "intro_subtitle": "Una forma simple de controlar su vida digital",
   "intro_option1": "Administre su tiempo con nuestra aplicación",
   "intro_option2": "Monitoreo de tareas con recordatorios diarios",
