--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -30,6 +30,7 @@
   "button_continue": "Continuar",
   "button_reminder": "Recuerdame",
   "button_due_date": "Fecha de vencimiento",
+  "button_remove": "Eliminar",
   "dialog_delete_subtitle": "No podrás deshacer esta acción.",
   "dialog_delete_title": "Se eliminará permanentemente.",
   "task_empty_title": "Ups! Tarea no encontrada",
@@ -71,5 +72,7 @@
   "calendar_tomorrow": "Tomorrow",
   "calendar_custom": "Otro día",
   "backup_export_modal": "Exportar en el dispositivo",
-  "backup_import_modal": "Importar desde el dispositivo"
+  "backup_import_modal": "Importar desde el dispositivo",
+  "coming_soon_title_modal": "Muy pronto",
+  "coming_soon_subtitle_modal": "Esta característica aún no está disponible, pero estamos trabajando en ello."
 }
