--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -23,6 +23,7 @@
   "home_completed": "Completed",
   "button_delete_task": "Delete Task",
   "button_save": "Save",
+  "button_delete": "Delete",
   "button_clear": "Clear",
   "button_show": "Show Completed",
   "button_hide": "Hide Completed",
@@ -31,13 +32,14 @@
   "button_reminder": "Remind Me",
   "button_due_date": "Add Due Date",
   "button_remove": "Remove",
-  "dialog_delete_subtitle": "You won't be able to undo this action.",
+  "dialog_delete_subtitle": "You won´t be able to undo this action.",
   "dialog_delete_title": "Will be permanently deleted.",
   "task_empty_title": "Ups! Task not found",
   "task_empty_subtitle": "Go back to home and add a new task",
   "settings_title": "Settings",
   "settings_label_general": "General",
   "settings_general_cloud": "Backup Copy",
+  "settings_general_notifications": "Notifications",
   "settings_general_reminders": "Reminders",
   "settings_custom_theme": "Theme App",
   "settings_label_about": "About",
@@ -48,8 +50,8 @@
   "settings_label_restore": "Danger Zone",
   "settings_button_restore_app": "Restore App",
   "about_author": "Ingedevs",
-  "about_author_description": "I'm a software developer from México. I love to create apps and learn new things.",
-  "about_description": "Tasking is a simple task manager app. It's free and open source.",
+  "about_author_description": "I´m a software developer from México. I love to create apps and learn new things.",
+  "about_description": "Tasking is a simple task manager app. It´s free and open source.",
   "about_built_part1": "Built using ",
   "about_built_part2": " with much ",
   "dialog_restore_title": "Restore App",
@@ -61,7 +63,7 @@
   "group_name_field": "Group name",
   "group_options_edit": "Edit group",
   "group_options_delete_title": "Delete group",
-  "group_options_delete_subtitle": "You can't delete the selected group",
+  "group_options_delete_subtitle": "You can´t delete the selected group",
   "group_delete_confirm_description": "Are you sure to eliminate this group? All the tasks it contains will be eliminated and they cannot be recovered.",
   "calendar_today": "Today",
   "calendar_tomorrow": "Tomorrow",
